[tool.poetry]
name = "crypto_tracker"
version = "0.1.0"
description = ""
authors = ["AlmirPaulo <ap.freelas@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.26.0"
pandas = "^1.3.3"
gspread = "^4.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
